@@ -1,3 +1,9 @@
+2003-05-08  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* gdb.threads/schedlock.exp: Remove assumption that all threads 
+	will run in a particular small time slice.  Also ensure we break 
+	in one of the child threads rather than the main thread.
+
 2003-05-07  Jim Blandy  <jimb@redhat.com>
 
 	Add support for assembly source testing on the s390x.
